2005-03-22  Dalibor Topic  <robilad@kaffe.org>

	* config/mips/common.h: Really include generic atomic primitives.

2005-03-22  Guilhem Lavaux  <guilhem@kaffe.org>,
	    Dalibor Topic  <robilad@kaffe.org>

	* config/arm/common.h: Disabled atomicity.h

2005-03-22  Guilhem Lavaux  <guilhem@kaffe.org>

	* config/config.h.in, configure: Regenerated.

	* config/mips/irix5/config.frag: Added need_stack_end=yes

	* configure.ac: Check for need_stack_end in config.frag and
	define SIGALTSTACK_NEEDS_END.

2005-03-22  Guilhem Lavaux  <guilhem@kaffe.org>

	* config/mips/common.h: Disabled atomicity.h

2005-03-22  Guilhem Lavaux  <guilhem@kaffe.org>

	* config/ia64/common.h: Removed the inclusion of atomicity.h

2005-03-22  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/scripts/compat/javadoc.in,
	kaffe/scripts/compat/javadoc.in:
	Added -Xmx512M to parameters used to invoke Kaffe to be able to 
	deal with running javadoc on Kaffe's source tree out of the box.

	* m4/m4/ac_prog_antlr.m4: Fixed antlr.jar test to bail out if 
	no antlr.jar can be found.
	
	Resynced with gjdoc.
	
	2005-03-14  Julian Scheid  <julian@sektor37.de>

	* src/gnu/classpath/tools/java2xhtml/Java2xhtml.java: Added
	license boilerplate; updated copyright and license in usage
	output.

	2005-03-13  Julian Scheid  <julian@sektor37.de>

	* src/gnu/classpath/tools/gjdoc/Main.java: Added method
	execute(String, String[]) and commented-out empty shells for
	additional execute methods.  Thanks to Jerry Haltom.
	
	2005-03-08  Julian Scheid  <julian@sektor37.de>

	* src/gnu/classpath/tools/gjdoc/Main.java: add support for option
	-reflection; disable reflection by default.

	* src/gnu/classpath/tools/gjdoc/RootDocImpl.java: only use
	reflection if enabled on command line.

	2005-03-08  Julian Scheid  <julian@sektor37.de>

	* src/gnu/classpath/tools/gjdoc/ExecutableMemberDocImpl.java:
	properly parse the thrown exception immediately preceding the
	closing semicolon of an interface method declaration.
